--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,31 @@
 .dark {
   @apply bg-slate-800 text-zinc-50;
 }
+.vertical-scroll::-webkit-scrollbar {
+  width: 2em;
+  height: 1em;
+}
+.vertical-scroll::-webkit-scrollbar-track {
+  background: hsl(0, 0%, 47%);
+  border-radius: 100vw;
+  margin-block: 0.5em;
+}
+.vertical-scroll::-webkit-scrollbar-thumb {
+  background: hsl(0, 0%, 24%);
+  border: 0.25em solid hsl(120, 1%, 27%);
+  border-radius: 100vw;
+}
+.vertical-scroll {
+  display: grid;
+  gap: 0.5em;
+  grid-auto-flow: column;
+  grid-auto-columns: 75%;
+  padding: 0.5em;
+  overflow-x: scroll;
+  /* background: #d3fdbe; */
+  border-radius: 1em;
+  position: relative;
+}
 
 @tailwind base;
 @tailwind components;
